[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "environment-variable-documenter"
version = "1.0.0"
description = "Read-only environment-variable usage inventory and redacted documentation generator."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Logan Pendragon Multiverse" }]
keywords = ["environment-variables", "dotenv", "documentation", "security", "configuration"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.15,<3",
  "pip-audit>=2.9,<3",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1"
]

[project.scripts]
env-documenter = "env_documenter.cli:main"

[project.urls]
Homepage = "https://github.com/loganpendragonmultiverse/environment-variable-documenter"
Issues = "https://github.com/loganpendragonmultiverse/environment-variable-documenter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["env_documenter"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["env_documenter"]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true

